--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ before_script:
 
 script:
   - docker --version # print the version for logging
-  - docker build --build-arg COOLEST_DOG=$COOLEST_DOG -t travis-env-var-test .
-  - docker tag travis-env-var-test forsythetony/travis-env-var-test:latest
+  - docker build --build-arg COOLEST_DOG=${COOLEST_DOG} -t travis-env-var-test .
+  - docker tag travis-env-var-test forsythetony/travis-env-var-test:1
 
 after_success:
   - echo "$DOCKERHUB_TOKEN" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
