--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ before_script:
 script:
   - docker --version # print the version for logging
   - docker build --build-arg COOLEST_DOG_BUILDTIME=${COOLEST_DOG_BUILDTIME} -t travis-env-var-test .
-  - docker tag travis-env-var-test forsythetony/travis-env-var-test:1
+  - docker tag travis-env-var-test forsythetony/travis-env-var-test:latest
 
 after_success:
   - echo "$DOCKERHUB_TOKEN" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
-  - docker push forsythetony/travis-env-var-test:1
+  - docker push forsythetony/travis-env-var-test
